--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -76,6 +76,11 @@ p{
     max-width: 100%;
     margin-top: auto;
     margin-bottom: auto;
+    background-color: #fcfcfc;
+    height: 300px;
+    border-radius: 0.35em;
+    box-shadow: 0 3px 10px 0 rgba(0, 0, 0, 0.25);
+    padding: 20px;
 }
 
 .sr-only{
