--- a/public/assets/mywork/assets/css/style.css
+++ b/public/assets/mywork/assets/css/style.css
@@ -8,12 +8,20 @@
     }
     
     h1 {
-        font-size: 75px;
+        font-size: 6vw;
+        text-transform: uppercase;
+        letter-spacing: 1pt;
+    }
+    
+    p {
+        font-size: 20px;
+        font-weight: bold;
+        text-align: center;
     }
     
     #button1,
     #button2 {
-        padding: 17px 40px 16px 41px;
+        padding: 17px 35px 16px 41px;
         border-radius: 4px;
         background-color: goldenrod;
         font-size: 17px;
@@ -24,4 +32,13 @@
     
     .login-btn:hover {
         color: white;
+    }
+    
+    body {
+        margin: 0;
+        padding: 0;
+        font-family: 'Muli', sans-serif;
+        margin: 50px 50px;
+        margin-top: -20px;
+        text-align: center;
     }
