--- a/public/assets/mywork/assets/css/style.css
+++ b/public/assets/mywork/assets/css/style.css
@@ -11,12 +11,7 @@
         font-size: 6vw;
         text-transform: uppercase;
         letter-spacing: 1pt;
-    }
-    
-    p {
-        font-size: 20px;
-        font-weight: bold;
-        text-align: center;
+        margin-bottom: 15px;
     }
     
     #button1,
@@ -34,11 +29,23 @@
         color: white;
     }
     
-    body {
+    body,
+    html {
         margin: 0;
-        padding: 0;
-        font-family: 'Muli', sans-serif;
-        margin: 50px 50px;
-        margin-top: -20px;
+        height: 100%;
         text-align: center;
+        font-family: 'Oxygen Mono', monospace;
+        color: #999;
+    }
+    
+    #table {
+        display: table;
+        width: 100%;
+        height: 100%;
+        background-color: #e5e5e5;
+    }
+    
+    #centeralign {
+        display: table-cell;
+        vertical-align: middle;
     }
