--- a/public/assets/mywork/assets/css/style.css
+++ b/public/assets/mywork/assets/css/style.css
@@ -17,9 +17,9 @@
     #button1,
     #button2 {
         padding: 17px 35px 16px 41px;
-        border-radius: 4px;
+        border-radius: 1px;
         background-color: goldenrod;
-        font-size: 17px;
+        font-size: 13px;
         font-weight: bold;
         color: white;
         line-height: 20px;
@@ -42,10 +42,48 @@
         display: table;
         width: 100%;
         height: 100%;
-        background-color: #e5e5e5;
+        background-color: #4e4848;
     }
     
     #centeralign {
         display: table-cell;
         vertical-align: middle;
+    }
+    
+    .modal-bg {
+        position: fixed;
+        width: 100%;
+        height: 100vh;
+        top: 0;
+        left: 0;
+        background-color: rgba(0, 0, 0, 0.5);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        visibility: hidden;
+        opacity: 0;
+        transition: visibility 0s, opacity 0.5s;
+    }
+    
+    .bg-active {
+        visibility: visible;
+        opacity: 1;
+    }
+    
+    .modal {
+        background-color: white;
+        width: 30%;
+        height: 30%;
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        flex-direction: column;
+    }
+    
+    .modal button {
+        padding: 10px 30px;
+        background-color: goldenrod;
+        color: white;
+        border: none;
+        font-family: 'Oxygen Mono', monospace;
     }
