added another div to hold everything

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -213,4 +213,8 @@ p{
 
 .add-btn:hover, .browsebook-btn:hover{
     color: white;
+    margin-top: 50px;
+}
+.membercontent{
+    height: 100vh;
 }
