--- a/views/createbook.handlebars
+++ b/views/createbook.handlebars
@@ -9,7 +9,7 @@
                         <li>Folow the format rules.</li>
                         <li>Books that have a cover, have a better chance of being sold.</li>
                         <li>Please, no profanities!</li>
-                        <li>Have fun and enjoy your website!</li>
+                        <li>Have fun and enjoy our website!</li>
                     </ul>
                 </div>
             </div>
