--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,1 +1,14 @@
-<h1> lending page ....</h1>
+<div class="membercontent">
+  <div class="imageandwelcome">
+    <img src="../assets/images/welcome.png" style="width:350px; height: 300px;" class="girlreading">
+    <h3>Welcome <span class="member-name">{{user.username}}</span>!</h3>
+  </div>
+  <div class="choices">
+    <h5>Would you like to add a book to sell or search through our library of books?</h5>
+    <input name="addbook" id="addbook" class="btn add-btn" value="Add a Book">
+    <input name="browsebook" id="browsebook" class="btn browsebook-btn"  value="Browse Library">
+  </div>
+</div>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script type="text/javascript" src="js/members.js"></script>
