--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -254,7 +254,7 @@ p{
     padding: 20px;
 }
 
-.submit-btn{
+.submit-btn, .btn-default{
     padding: 17px 40px 16px 41px;
     border-radius: 4px;
     background-color: rgb(217, 165, 32);
@@ -266,6 +266,9 @@ p{
 }
 
 .submit-btn:hover{
+    color: white;
+}
+.btn-default:hover{
     color: white;
 }
 
@@ -354,3 +357,19 @@ p{
 /*availablebooks end*/
 
 /*apibooks start*/
+#searchbar{
+    min-height: 55px;
+    border: 0;
+    border-radius: 4px;
+    font-size: 15px;
+    background-color: #f4f4f4;
+    padding: 19px 25px 18px;
+    margin-bottom: 18px;
+    width: 400px;
+    margin: auto;
+}
+
+.input-field{
+    width: 100%;
+}
+
