--- a/views/layout/main.handlebars
+++ b/views/layout/main.handlebars
@@ -3,7 +3,7 @@
 
 <head>
   <title>BookToShare</title>
-  <link rel="shortcut icon" type="image/ico" href="./images/favicon.ico">
+  <link rel="shortcut icon" type="image/ico" href="../../public/assets/images/favicon.ico">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/lumen/bootstrap.min.css">
