--- a/views/add-book.handlebars
+++ b/views/add-book.handlebars
@@ -15,7 +15,7 @@
             </div>
         </div>
     <div class="container-submit">
-        <form method="POST" action="/main/add-book" class="submitcont">
+        <form method="post" action="/api/book/create" class="submitcont" >
                 <div class="form-group">
                     <label for="formGroupExampleInput">Book Title</label>
                     <input type="text" class="form-control"  placeholder="Enter book title" name="title" >
@@ -35,9 +35,9 @@
                     </div>
                     <div class="form-group">
                     <label for="formGroupExampleInput">Book Cover</label>
-                    <input type="text" class="form-control"  placeholder="Submit the cover URL" name="cover">
+                    <input type="text" class="form-control"  placeholder="Submit the cover URL" name="jpegImg">
                     </div>
-                    <input name="submit" class="btn submit-btn" value="Submit your book">
+                    <input name="submit" type="submit" class="btn submit-btn" value="Submit your book">
             </form>
 			<span class="todo-container">
 			</span>
