started work on api

--- a/views/search-apibook.handlebars
+++ b/views/search-apibook.handlebars
@@ -1,6 +1,16 @@
 <div class="apicontent">
     <div class="imagesearch">
-        <img src="../assets/images/search.png" style="width:350px; height: 300px;" class="girlreading">
+        <img src="../assets/images/searchapi.png" style="width:350px; height: 300px;" class="girlreading">
     </div>
-
+<div id="search">
+    <form id="myform">
+        <div class="input-field">
+            <input type="search" id="search-box" class="form-control" placeholder="Search for Books" aria-describedby="button-addon2">
+        </div>
+        <button class="btn btn-search" type="button" id="search-btn">Button</button>
+    </form>
+  </div>
+  <div class="results">
+      <!--results-->
+  </div>
 </div>
