--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -357,7 +357,7 @@ p{
 /*availablebooks end*/
 
 /*apibooks start*/
-#searchbar{
+#search-box{
     min-height: 55px;
     border: 0;
     border-radius: 4px;
@@ -366,10 +366,36 @@ p{
     padding: 19px 25px 18px;
     margin-bottom: 18px;
     width: 400px;
-    margin: auto;
+    position:relative;
+	right: 50px;
 }
 
 .input-field{
     width: 100%;
 }
+
+.btn-search{
+    padding: 17px 40px 16px 41px;
+    border-radius: 4px;
+    background-color: rgb(217, 165, 32);
+    font-size: 17px;
+    font-weight: bold;
+    color: white;
+    line-height: 20px; 
+    position:relative;
+	left:50px;
+}
+
+.btn-search:hover{
+    color: white;
+}
+
+#search{
+	width:300px;
+	height:150px;
+	margin:auto;
+	margin-top:20px;
+	padding:15px;
+}
+
 
