fixed css routing in mainhandlebars

--- a/views/search-book.handlebars
+++ b/views/search-book.handlebars
@@ -1,6 +1,8 @@
-
+<div class="imagebrowse">
+        <img src="/assets/images/browse.png" style="width:350px; height: 300px;" class="girlreading">
+    </div>
 <div class="input-group mb-3">
-    <input class="form-control" type="text" placeholder="Find By Name...">
+    <input class="form-control" type="text" placeholder="Find By Name..." id="search-box">
     <div class="input-group-append">
         <button class="btn btn-outline-secondary" type="button">Search</button>
     </div>
