deleted mirror page

--- a/views/search-book.handlebars
+++ b/views/search-book.handlebars
@@ -1,3 +1,4 @@
+<div class="availablecontent">
 <div class="imagebrowse">
         <img src="/assets/images/browse.png" style="width:350px; height: 300px;" class="girlreading">
     </div>
@@ -17,3 +18,5 @@
             </div>
         </div>
 {{/each}}
+<h5 class="linktoapi">Didn't find the book you were looking for? We got you! <a href="/search-apibook">Click me!</a></h5>
+</div>
