--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -352,7 +352,7 @@ p{
     color: white;
     line-height: 20px; 
     position:relative;
-	left:50px;
+	left:10px;
 }
 
 .btn-search1:hover{
@@ -367,7 +367,7 @@ p{
     font-weight: bold;
     color: white;
     line-height: 20px; 
-	left:50px;
+    left:50px;
 }
 
 .btn-block:hover{
@@ -404,9 +404,11 @@ p{
     width: 200px;
     position: relative;
     float: left;
-    margin-bottom: 20px;
+    margin-bottom: 90px;
     margin-right: 90px;
     word-wrap: break-word;
+    min-height: 450px;
+    max-height: 450px;
 }
 
 .card-body{
@@ -424,6 +426,7 @@ p{
 
 .card-text{
     font-size: 12px;
+    padding-bottom: 10px;
 }
 /*search-book end*/
 
@@ -468,5 +471,3 @@ p{
 	margin-top:20px;
 	padding:15px;
 }
-
-
