--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -254,7 +254,7 @@ p{
     padding: 20px;
 }
 
-.submit-btn, .btn-default{
+.submit-btn, .btn-default, .btn-delete{
     padding: 17px 40px 16px 41px;
     border-radius: 4px;
     background-color: rgb(217, 165, 32);
@@ -263,6 +263,9 @@ p{
     color: white;
     line-height: 20px; 
     
+}
+.btn-delete:hover{
+    color: white;
 }
 
 .submit-btn:hover{
@@ -470,4 +473,19 @@ p{
 	margin:auto;
 	margin-top:20px;
 	padding:15px;
+}
+/*apibooks end*/
+
+/*userpage start*/
+
+.user-wrapper{
+    width: 300px;
+    max-width: 100%;
+    margin-top: auto;
+    margin-bottom: auto;
+    background-color: #fcfcfc;
+    height: 300px;
+    border-radius: 0.35em;
+    box-shadow: 0 3px 10px 0 rgba(0, 0, 0, 0.25);
+    padding: 20px;
 }
