--- a/views/search-book.handlebars
+++ b/views/search-book.handlebars
@@ -19,7 +19,7 @@
             <div class="card-body">
                 <h4 class="card-title">{{title}}</h4>
                 <p class="card-text">{{description}}</p>
-                <a class="btn btn-block" href="#">Buy</a>
+                <a class="btn btn-block" href="#">Add To Cart</a>
                 <a class="btn btn-block" href="#">Edit</a>
             </div>
         </div>   
