--- a/views/user.handlebars
+++ b/views/user.handlebars
@@ -1,20 +1,35 @@
-
+<div class="imagebrowse">
+        <img src="/assets/images/deleteuser.png" style="width:350px; height: 300px;" class="girlreading">
+    </div>
+<h2 class="text-center" id="users-title">All Users Database</h2>
 {{#each user}}
-<div class="login-wrapper">
-    <h2 class="login-title">Sign in</h2>
-    <form class="login">
+<div class="user-wrapper">
+    <form class="users">
         <div class="form-group">
             <label for="username" class="sr-only">Username</label>
             <input type="username" name="username" id="username" class="form-control"
                    placeholder="Username" value="{{username}}">
         </div>
+
+        <div class="form-group">
+            <label for="username" class="sr-only">Username</label>
+            <input type="username" name="username" id="username" class="form-control"
+                   placeholder="Username" value="{{firstname}}">
+        </div>
+
+        <div class="form-group">
+            <label for="username" class="sr-only">Username</label>
+            <input type="username" name="username" id="username" class="form-control"
+                   placeholder="Username" value="{{lastname}}">
+        </div>
+
         <div class="form-group mb-3">
             <label for="password" class="sr-only">Password</label>
             <input type="password" name="password" id="password" class="form-control"
                    placeholder="Password">
         </div>
         <div class="d-flex justify-content-between align-items-center mb-5">
-            <button type="submit" class="btn btn-default">SHOWALLMEMBER</button>
+            <button type="submit" class="btn btn-delete">Delete User</button>
         </div>
     </form>
 </div>
