--- a/views/user.handlebars
+++ b/views/user.handlebars
@@ -1,7 +1,9 @@
+<div class="userscontent">
 <div class="imagebrowse">
         <img src="/assets/images/deleteuser.png" style="width:350px; height: 300px;" class="girlreading">
     </div>
 <h2 class="text-center" id="users-title">All Users Database</h2>
+<div class="allusersdisplayed">
 {{#each user}}
 <div class="user-wrapper">
     <form class="users">
@@ -34,3 +36,5 @@
     </form>
 </div>
 {{/each}}
+</div>
+</div>
