--- a/public/assets/mywork/assets/css/style.css
+++ b/public/assets/mywork/assets/css/style.css
@@ -10,10 +10,10 @@
     .raise-modal {
         position: relative;
         top: -89%;
-        /* display: block; */
         border: solid red;
         width: 46%;
         margin: auto;
+        background-color: grey;
     }
     
     .hidden {
@@ -96,7 +96,7 @@
     
     .modal {
         position: relative;
-        background-color: white;
+        background-color: lightgrey;
         height: 30%;
         display: flex;
         justify-content: space-around;
@@ -113,10 +113,10 @@
         ;
     }
     
-    .modal-close {
+    #modalClose {
         position: absolute;
-        top: 10px;
-        right: 10px;
+        top: 0;
+        right: 0;
         font-weight: bold;
         cursor: pointer;
     }
