--- a/views/search-book.handlebars
+++ b/views/search-book.handlebars
@@ -18,6 +18,7 @@
             <img class="card-img-top" src="{{jpegImg}}" alt="">
             <div class="card-body">
                 <h4 class="card-title">{{title}}</h4>
+                <p class="price-text">Price: {{price}}</p>
                 <p class="card-text">{{description}}</p>
                 <a class="btn btn-block" href="#">Add To Cart</a>
                 <a class="btn btn-block" href="#">Edit</a>
