--- a/views/add-book.handlebars
+++ b/views/add-book.handlebars
@@ -7,7 +7,7 @@
                     <ul>
                         <li>Fill out all fields.</li>
                         <li>Folow the format rules.</li>
-                        <li>Books that have a cover, have a better chance of being sold.</li>
+                        <li>Books with a cover, have a better chance of being sold.</li>
                         <li>Please, no profanities!</li>
                         <li>Have fun and enjoy our website!</li>
                     </ul>
