--- a/views/layout/main.handlebars
+++ b/views/layout/main.handlebars
@@ -8,6 +8,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/lumen/bootstrap.min.css">
   <link href="/assets/css/style.css" rel="stylesheet">
+  {{!-- <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+  <script src=" https://use.fontawesome.com/f9f13d875e.js"></script> --}}
    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
    <script type="text/javascript" src="/assets/js/apibooks.js"></script>
 </head>
