--- a/views/user.handlebars
+++ b/views/user.handlebars
@@ -31,10 +31,12 @@
                    placeholder="Password">
         </div>
         <div class="d-flex justify-content-between align-items-center mb-5">
-            <button type="submit" class="btn btn-delete">Delete User</button>
+            <label id="userId" class="hidden">{{id}}</label>
+            <button type="submit" id="delete" class="btn btn-delete">Delete User</button>
         </div>
     </form>
 </div>
 {{/each}}
 </div>
 </div>
+<script src="../../assets/js/edit-user.js" type="text/javascript"></script>
