--- a/views/search-apibook.handlebars
+++ b/views/search-apibook.handlebars
@@ -7,7 +7,7 @@
         <div class="input-field">
             <input type="search" id="search-box" class="form-control" placeholder="Search for Books" aria-describedby="button-addon2">
         </div>
-        <button class="btn btn-search" type="button" id="search-btn">Button</button>
+        <button class="btn btn-search" type="button" id="search-btn">Search</button>
     </form>
   </div>
   <div class="results">
