--- a/views/layout/cart.html
+++ b/views/layout/cart.html
@@ -21,6 +21,9 @@
             <li class="nav-item">
               <a class="nav-link" href="#">Library</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Log out</a>
+              </li>
            <li class="nav-item">
             <a class="cart-contents" href="http://www.bbc.uk.co" title="add to cart"><i class="fa fa-shopping-cart fa-2x" aria-hidden="true"></i>
                 <!-- <div class="cart-contents-count"></div> -->
@@ -32,6 +35,25 @@
                 <h2 class="yourcart"> Your Cart! </h2>
             </div>
 
+            <!-- <div class="allbooksdisplayed">
+                {{#each books}}
+        
+                    <div class="card-deck" id="{{id}}">
+                        <div class="card">
+                            <img class="card-img-top" src="{{jpegImg}}" alt="">
+                            <div class="card-body">
+                                <h4 class="card-title">{{title}}</h4>
+                                <p class="card-text">By: {{author}}</p>
+                                <p class="card-text">{{description}}</p>
+                                <p class="price-text">Price: {{price}}</p>
+                                <label id="bookId" class="hidden">{{id}}</label>
+                                <a class="btn btn-block" id="deleteFromCart">Delete From Cart</a>
+                            </div>
+                        </div>
+                    </div>
+        
+                {{/each}}
+            </div> -->
     
     </div>
 
