--- a/views/search-book.handlebars
+++ b/views/search-book.handlebars
@@ -8,6 +8,7 @@
 
             </div>
             <button class="btn btn-search1"  id="addBook" type="button"> Add Another Book</button>
+             <h5 class="linktoapi">If you don't find the book you are looking for, we got you! <a href="/search-apibook">Click here!</a></h5>
         </form>
     </div>
     <div class="allbooksdisplayed">
@@ -18,6 +19,7 @@
                     <img class="card-img-top" src="{{jpegImg}}" alt="">
                     <div class="card-body">
                         <h4 class="card-title">{{title}}</h4>
+                        <p class="card-text">By: {{author}}</p>
                         <p class="card-text">{{description}}</p>
                         <p class="price-text">Price: {{price}}</p>
                         <label id="bookId" class="hidden">{{id}}</label>
@@ -32,7 +34,7 @@
 
         {{/each}}
     </div>
-    {{!-- <h5 class="linktoapi">Didn't find the book you were looking for? We got you! <a href="/search-apibook">Click me!</a></h5> --}}
+   
 </div>
 
 <script src="../../assets/js/search-book.js" type="text/javascript"></script>
