added checkout page

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,6 +1,7 @@
 /*login start*/
 body{
     font-family: 'Muli', sans-serif;
+    color:  rgb(70,69,91);
 }
 
 .row{
@@ -365,6 +366,26 @@ p{
     line-height: 20px; 
     position:relative;
 	left:10px;
+}
+
+.checkout-btn{
+    padding: 17px 40px 16px 41px;
+    border-radius: 4px;
+    background-color: rgb(217, 165, 32);
+    font-size: 17px;
+    font-weight: bold;
+    color: white;
+    line-height: 20px; 
+    text-transform: uppercase;
+    font-weight: bold;
+}
+
+.checkoutbtndiv{
+    text-align: center;
+}
+
+.checkout-btn:hover{
+    color: white;
 }
 
 .btn-search1:hover{
