--- a/views/layout/checkout.html
+++ b/views/layout/checkout.html
@@ -30,34 +30,11 @@
             </a>
            </li>
           </ul>
-            <div class="imageandwelcome">
-                <img src="../../public/assets/images/payus.png" style="width:350px; height: 300px;" class="girlreading">
-                <h2 class="yourcart"> Your Cart! </h2>
-            </div>
-
-            <!-- <div class="allbooksdisplayed">
-                {{#each books}}
-        
-                    <div class="card-deck" id="{{id}}">
-                        <div class="card">
-                            <img class="card-img-top" src="{{jpegImg}}" alt="">
-                            <div class="card-body">
-                                <h4 class="card-title">{{title}}</h4>
-                                <p class="card-text">By: {{author}}</p>
-                                <p class="card-text">{{description}}</p>
-                                <p class="price-text">Price: {{price}}</p>
-                                <label id="bookId" class="hidden">{{id}}</label>
-                                <a class="btn btn-block" id="deleteFromCart">Delete From Cart</a>
-                            </div>
-                        </div>
-                    </div>
-        
-                {{/each}}
-            </div> -->
-        <div class="checkoutbtndiv">
-            <input id="checkout" class="btn checkout-btn" value="Checkout">
+          <div class="imageandwelcome">
+            <img src="../../public/assets/images/confirmed.png" style="width:350px; height: 300px;" class="girlreading">
+            <h2 class="yourcart"> Congratulations! Your order is confirmed!</h2>
         </div>
-    </div>
+    </div>    
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
