--- a/views/layout/main.handlebars
+++ b/views/layout/main.handlebars
@@ -2,31 +2,50 @@
 <html lang="en">
 
 <head>
-  <title>BookToShare</title>
-  <link rel="shortcut icon" type="image/ico" href="../../public/assets/images/favicon.ico">
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/lumen/bootstrap.min.css">
-  <link href="/assets/css/style.css" rel="stylesheet">
-  {{!-- <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
-  <script src=" https://use.fontawesome.com/f9f13d875e.js"></script> --}}
-   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-   <script type="text/javascript" src="/assets/js/apibooks.js"></script>
+    <title>BookToShare</title>
+    <link rel="shortcut icon" type="image/ico" href="../../public/assets/images/favicon.ico">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/lumen/bootstrap.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Muli&display=swap" rel="stylesheet">
+    <link href="/assets/css/style.css" rel="stylesheet">
 </head>
 
 <body>
+
+<div class="cartcontent">
+    <ul class="nav justify-content-end">
+        <li class="nav-item">
+            <a class="nav-link" id="profile">Profile</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" id="home">Home</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" id="library">Library</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" id="logOut">Log out</a>
+        </li>
+        <li class="nav-item">
+            <a class="cart-contents" id="cart" title="add to cart"><i class="fa fa-shopping-cart fa-2x" aria-hidden="true"></i>
+                <!-- <div class="cart-contents-count"></div> -->
+            </a>
+        </li>
+    </ul>
+</div>
+<script src=" https://use.fontawesome.com/f9f13d875e.js"></script>
+<!--script type="text/javascript" src="/assets/js/apibooks.js"></script-->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-  
-
-
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
         integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
         crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
         integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
         crossorigin="anonymous"></script>
+<script src="/assets/js/main.js" type="text/javascript"></script>
 
-  {{{body}}}
+{{{body}}}
 
 
 </body>
