--- a/views/cart.handlebars
+++ b/views/cart.handlebars
@@ -15,7 +15,7 @@
                                 <p class="card-text">{{description}}</p>
                                 <p class="price-text">Price: {{price}}</p>
                                 <label id="bookId" class="hidden">{{id}}</label>
-                                <a class="btn btn-block" id="deleteFromCart">Delete From Cart</a>
+                                <input name="delete"  id="deletefromcart" class="btn submit-btn" value="REMOVE">
                             </div>
                         </div>
                     </div>
