--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,6 +1,6 @@
 <div class="membercontent">
   <div class="imageandwelcome">
-    <img src="../assets/images/welcome.png" style="width:350px; height: 300px;" class="girlreading">
+    <img src="/assets/images/welcome.png" style="width:350px; height: 300px;" class="girlreading">
     <h3>Welcome <span class="member-name">{{user.username}}</span>!</h3>
   </div>
   <div class="choices">
