--- a/views/edit-book.handlebars
+++ b/views/edit-book.handlebars
@@ -22,7 +22,7 @@
                     </div>
                     <div class="form-group">
                     <label for="formGroupExampleInput">Author</label>
-                    <input type="text" class="form-control"  placeholder="Enter the book's author" name="author" value="{{book.title}}">
+                    <input type="text" class="form-control"  placeholder="Enter the book's author" name="author" value="{{book.author}}">
                     </div>
             
                     <div class="form-group">
