--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,7 +1,7 @@
 <div class="membercontent">
   <div class="imageandwelcome">
     <img src="/assets/images/welcome.png" style="width:350px; height: 300px;" class="girlreading">
-    <h3>Welcome <span class="member-name">{{user.username}}</span>!</h3>
+    <h3 class="welcometext">Welcome <span class="member-name">{{user.username}}</span>!</h3>
   </div>
   <div class="choices">
     <h5>Would you like to add a book to sell or search through our library of books?</h5>
