--- a/views/search-book.handlebars
+++ b/views/search-book.handlebars
@@ -7,8 +7,9 @@
             <div class="input-field">
 
             </div>
-            <button class="btn btn-search1"  id="addBook" type="button"> Add Another Book</button>
-             <h5 class="linktoapi">If you don't find the book you are looking for, we got you! <a href="/search-apibook">Click here!</a></h5>
+            <button class="btn btn-search1" id="addBook" type="button"> Add Another Book</button>
+            <h5 class="linktoapi">If you don't find the book you are looking for, we got you! <a href="/search-apibook">Click
+                here!</a></h5>
         </form>
     </div>
     <div class="allbooksdisplayed">
@@ -24,9 +25,9 @@
                         <p class="price-text">Price: {{price}}</p>
                         <label id="bookId" class="hidden">{{id}}</label>
                         {{#if isNotOwn}}
-                            <a class="btn btn-block" id="addToCart">Add To Cart</a>
+                            <a class="btn btn-block addToCart" data-id="{{id}}">Add To Cart</a>
                         {{else}}
-                            <a class="btn btn-block"  id="editBook">Edit</a>
+                            <a class="btn btn-block editBook" data-id="{{id}}">Edit</a>
                         {{/if}}
                     </div>
                 </div>
@@ -34,7 +35,7 @@
 
         {{/each}}
     </div>
-   
+
 </div>
 
 <script src="../../assets/js/search-book.js" type="text/javascript"></script>
